@@ -2,7 +2,7 @@
  *
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2003 Olly Betts
+ * Copyright 2003,2005 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -55,7 +55,7 @@ class AllTermsList : public TermList
 	virtual OmExpandBits get_weighting() const {
 	    Assert(false); // should never get called
 	    abort();
-#ifdef __SUNPRO_CC
+#if defined __SUNPRO_CC || defined __sgi
 	    // For compilers which worry abort() might return...
 	    return OmExpandBits(0, 0, 0);
 #endif
