@@ -2,7 +2,7 @@
  *
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2002,2003,2004 Olly Betts
+ * Copyright 2002,2003,2004,2005 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -34,9 +34,7 @@
 #include "autoptr.h"  // auto_ptr
 
 class SubMatch;
-class Xapian::ErrorHandler;
 class SocketServer;
-class Xapian::Weight;
 
 class MultiMatch
 {
