@@ -3,7 +3,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003,2004 Olly Betts
+ * Copyright 2002,2003,2004,2005 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -32,9 +32,6 @@
 
 namespace Xapian {
     class Weight;
-    class Database::Internal;
-    class Document::Internal;
-    class PostingIterator::Internal;
 }
 typedef Xapian::PostingIterator::Internal PostList;
 
