@@ -3,7 +3,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003,2004 Olly Betts
+ * Copyright 2002,2003,2004,2005 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -26,8 +26,6 @@
 #define OM_HGUARD_MERGEPOSTLIST_H
 
 #include "postlist.h"
-
-class Xapian::ErrorHandler;
 
 /** A postlist comprising postlists from different databases mergeed together.
  */
