@@ -3,7 +3,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2003,2004 Olly Betts
+ * Copyright 2003,2004,2005 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -124,6 +124,10 @@ ProgClient::get_spawned_socket(string progname, const string &args)
     /* throwing an exception is a bad idea, since we're
      * not the original process. */
     _exit(-1);
+#ifdef __sgi
+    // Avoid "missing return statement" warning.
+    return 0;
+#endif
 }
 
 ProgClient::~ProgClient()
